test/invalid/toomany_identifier.ml
a <- 1
aa <- 1
aaa <- 1
aaaa <- 1
aaaaa <- 1
b <- 1
bb <- 1
bbb <- 1
bbbb <- 1
bbbbb <- 1
c <- 1
cc <- 1
ccc <- 1
cccc <- 1
ccccc <- 1
cccccc <- 1
d <- 1
dd <- 1
ddd <- 1
dddd <- 1
ddddd <- 1
e <- 1
ee <- 1
eee <- 1
eeee <- 1
eeeee <- 1
f <- 1
ff <- 1
fff <- 1
ffff <- 1
fffff <- 1
g <- 1
gg <- 1
ggg <- 1
gggg <- 1
ggggg <- 1
h <- 1
hh <- 1
hhh <- 1
hhhh <- 1
hhhhh <- 1
i <- 1
ii <- 1
iii <- 1
iiii <- 1
iiiii <- 1
function j
    return 0
funcion jj
    print 0
function jjj
    print 0
function jjjj
    print 0
function jjjjj
    return 0
function k kk kkk kkkk kkkkk
    return k + kk / kk - kkkk * kkkkk

